test/vm/fails/invalid_hex_string_1.js

binary_hex("000");
